--- a/css/main.css
+++ b/css/main.css
@@ -179,9 +179,10 @@ main .design_section .design_text {
   color: #fff;
 }
 main .design_section .design_text h2 {
-  font-size: 6rem;
+  font-size: 5rem;
   padding-bottom: 50px;
   letter-spacing: 2px;
+  font-weight: 500;
 }
 main .design_section .design_text .design_desc {
   position: relative;
@@ -350,9 +351,9 @@ main .color_section {
   border-bottom: 1px solid #1e1e1e;
 }
 main .color_section h1 {
-  font-size: 3rem;
+  font-size: 2.8rem;
+  font-weight: normal;
   margin-top: 80px;
-  margin-bottom: -25px;
   text-align: center;
   color: #fff;
 }
@@ -371,27 +372,41 @@ main .color_section .genesis_color .swiper-wrapper li.swiper-slide-active {
   scale: 1;
 }
 main .color_section .genesis_color .swiper-wrapper li.swiper-slide-prev {
-  scale: 0.7;
+  scale: 0.8;
 }
 main .color_section .genesis_color .swiper-wrapper li.swiper-slide-next {
-  scale: 0.7;
+  scale: 0.8;
 }
 main .color_section .genesis_color .swiper-wrapper li .color_box img {
   margin: 0 auto;
+  transition: 0.3s;
+}
+main .color_section .genesis_color .swiper-wrapper li .color_box img.scale {
+  transform: scale(1.4);
+}
+main .color_section .genesis_color .swiper-pagination {
+  width: 300px;
+  bottom: auto;
+  left: auto;
+  top: 50px;
+  right: 310px;
 }
 main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet {
   position: relative;
-  width: 50px;
-  height: 50px;
+  width: 25px;
+  height: 25px;
   margin-right: 15px;
   opacity: 0.6;
+  transition: 0.3s;
 }
 main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet:last-child {
   margin-right: 0;
 }
 main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
-  border: 4px solid #ccc;
   opacity: 1;
+  width: 50px;
+  border-radius: 50px;
+  box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.8);
 }
 main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet:nth-child(1) {
   background-color: #fff;
@@ -403,7 +418,7 @@ main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet:
   background-color: #000;
 }
 main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet:nth-child(4) {
-  background-color: blue;
+  background-color: #0000ff;
 }
 main .color_section .genesis_color .swiper-pagination .swiper-pagination-bullet:nth-child(5) {
   background-color: red;
@@ -422,138 +437,190 @@ main .color_section .genesis_color .swiper-button-next {
 main .gallery_section {
   height: calc(100vh - 70px);
   overflow: hidden;
+  /* .gallery {
+      display: flex;
+      width: 100%;
+
+      .gallery_left,
+      .gallery_center,
+      .gallery_right {
+        width: 100%;
+
+        .img_box {
+          position: relative;
+          padding: 4px;
+
+          &::before,
+          &::after {
+            content: '';
+            display: block;
+            position: absolute;
+            background-color: #fff;
+            width: 0;
+            height: 0;
+            transition: .3s;
+          }
+
+          &:hover {
+            &::before {
+              width: 4px;
+              height: 100%;
+            }
+
+            &::after {
+              width: 100%;
+              height: 4px;
+            }
+
+            .gallery_img {
+              &::before {
+                width: 100.5%;
+                height: 4px;
+              }
+
+              &::after {
+                width: 4px;
+                height: 100%;
+              }
+
+              img {
+                transform: scale(1.2);
+              }
+            }
+
+          }
+
+          &::before {
+            left: -3px;
+            bottom: 0;
+          }
+
+          &::after {
+            right: 0px;
+            bottom: 0px;
+          }
+
+          .gallery_img {
+            overflow: hidden;
+
+            &::before {
+              content: '';
+              display: block;
+              position: absolute;
+              left: -3px;
+              top: -3px;
+              background-color: #fff;
+              width: 0;
+              height: 0;
+              transition: .3s;
+            }
+
+            &::after {
+              content: '';
+              display: block;
+              position: absolute;
+              right: 0px;
+              top: 0px;
+              background-color: #fff;
+              width: 0;
+              height: 0;
+              transition: .3s;
+            }
+
+
+            img {
+              width: 100%;
+              height: 100%;
+              transition: .6s;
+              cursor: pointer;
+            }
+
+          }
+        }
+
+
+      }
+
+      .gallery_left {
+        width: 28%;
+
+        .img_box {
+          padding-left: 0;
+
+          &:nth-child(1) {
+            .gallery_img {
+              height: 580px;
+            }
+          }
+
+
+          &:nth-child(2) {
+            .gallery_img {}
+          }
+        }
+      }
+
+      .gallery_center {
+        width: 36%;
+
+        .img_box {
+          &:nth-child(1) {
+            .gallery_img {}
+          }
+
+
+          &:nth-child(2) {
+            .gallery_img {
+              height: 580px;
+            }
+          }
+        }
+      }
+
+      .gallery_right {
+        width: 36%;
+
+        .img_box {
+          padding-right: 0;
+
+          &:nth-child(1) {
+            .gallery_img {}
+          }
+
+
+          &:nth-child(2) {
+            .gallery_img {}
+          }
+        }
+      }
+
+
+    }
+  } */
+}
+main .gallery_section .tit {
+  padding: 50px 0 25px 0;
 }
 main .gallery_section .tit h1 {
   font-size: 3rem;
   text-align: center;
   color: #fff;
 }
-main .gallery_section .gallery {
-  display: flex;
+main .gallery_section .gallery_swiper {
   width: 100%;
+  height: 500px;
 }
-main .gallery_section .gallery .gallery_left,
-main .gallery_section .gallery .gallery_center,
-main .gallery_section .gallery .gallery_right {
-  width: 100%;
+main .gallery_section .gallery_swiper .swiper-wrapper {
+  transition-timing-function: linear;
 }
-main .gallery_section .gallery .gallery_left .img_box,
-main .gallery_section .gallery .gallery_center .img_box,
-main .gallery_section .gallery .gallery_right .img_box {
-  position: relative;
-  padding: 4px;
+main .gallery_section .gallery_swiper .swiper-wrapper .swiper-slide {
+  margin-right: 40px;
 }
-main .gallery_section .gallery .gallery_left .img_box::before, main .gallery_section .gallery .gallery_left .img_box::after,
-main .gallery_section .gallery .gallery_center .img_box::before,
-main .gallery_section .gallery .gallery_center .img_box::after,
-main .gallery_section .gallery .gallery_right .img_box::before,
-main .gallery_section .gallery .gallery_right .img_box::after {
-  content: "";
-  display: block;
-  position: absolute;
-  background-color: #fff;
-  width: 0;
-  height: 0;
-  transition: 0.3s;
-}
-main .gallery_section .gallery .gallery_left .img_box:hover::before,
-main .gallery_section .gallery .gallery_center .img_box:hover::before,
-main .gallery_section .gallery .gallery_right .img_box:hover::before {
-  width: 4px;
-  height: 100%;
-}
-main .gallery_section .gallery .gallery_left .img_box:hover::after,
-main .gallery_section .gallery .gallery_center .img_box:hover::after,
-main .gallery_section .gallery .gallery_right .img_box:hover::after {
-  width: 100%;
-  height: 4px;
-}
-main .gallery_section .gallery .gallery_left .img_box:hover .gallery_img::before,
-main .gallery_section .gallery .gallery_center .img_box:hover .gallery_img::before,
-main .gallery_section .gallery .gallery_right .img_box:hover .gallery_img::before {
-  width: 100.5%;
-  height: 4px;
-}
-main .gallery_section .gallery .gallery_left .img_box:hover .gallery_img::after,
-main .gallery_section .gallery .gallery_center .img_box:hover .gallery_img::after,
-main .gallery_section .gallery .gallery_right .img_box:hover .gallery_img::after {
-  width: 4px;
-  height: 100%;
-}
-main .gallery_section .gallery .gallery_left .img_box:hover .gallery_img img,
-main .gallery_section .gallery .gallery_center .img_box:hover .gallery_img img,
-main .gallery_section .gallery .gallery_right .img_box:hover .gallery_img img {
-  transform: scale(1.2);
-}
-main .gallery_section .gallery .gallery_left .img_box::before,
-main .gallery_section .gallery .gallery_center .img_box::before,
-main .gallery_section .gallery .gallery_right .img_box::before {
-  left: -3px;
-  bottom: 0;
-}
-main .gallery_section .gallery .gallery_left .img_box::after,
-main .gallery_section .gallery .gallery_center .img_box::after,
-main .gallery_section .gallery .gallery_right .img_box::after {
-  right: 0px;
-  bottom: 0px;
-}
-main .gallery_section .gallery .gallery_left .img_box .gallery_img,
-main .gallery_section .gallery .gallery_center .img_box .gallery_img,
-main .gallery_section .gallery .gallery_right .img_box .gallery_img {
-  overflow: hidden;
-}
-main .gallery_section .gallery .gallery_left .img_box .gallery_img::before,
-main .gallery_section .gallery .gallery_center .img_box .gallery_img::before,
-main .gallery_section .gallery .gallery_right .img_box .gallery_img::before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: -3px;
-  top: -3px;
-  background-color: #fff;
-  width: 0;
-  height: 0;
-  transition: 0.3s;
-}
-main .gallery_section .gallery .gallery_left .img_box .gallery_img::after,
-main .gallery_section .gallery .gallery_center .img_box .gallery_img::after,
-main .gallery_section .gallery .gallery_right .img_box .gallery_img::after {
-  content: "";
-  display: block;
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  background-color: #fff;
-  width: 0;
-  height: 0;
-  transition: 0.3s;
-}
-main .gallery_section .gallery .gallery_left .img_box .gallery_img img,
-main .gallery_section .gallery .gallery_center .img_box .gallery_img img,
-main .gallery_section .gallery .gallery_right .img_box .gallery_img img {
+main .gallery_section .gallery_swiper .swiper-wrapper .swiper-slide .gallery_img {
   width: 100%;
   height: 100%;
-  transition: 0.6s;
-  cursor: pointer;
 }
-main .gallery_section .gallery .gallery_left {
-  width: 28%;
-}
-main .gallery_section .gallery .gallery_left .img_box {
-  padding-left: 0;
-}
-main .gallery_section .gallery .gallery_left .img_box:nth-child(1) .gallery_img {
-  height: 580px;
-}
-main .gallery_section .gallery .gallery_center {
-  width: 36%;
-}
-main .gallery_section .gallery .gallery_center .img_box:nth-child(2) .gallery_img {
-  height: 580px;
-}
-main .gallery_section .gallery .gallery_right {
-  width: 36%;
-}
-main .gallery_section .gallery .gallery_right .img_box {
-  padding-right: 0;
+main .gallery_section .gallery_swiper .swiper-wrapper .swiper-slide .gallery_img img {
+  width: 100%;
+  height: 100%;
 }/*# sourceMappingURL=main.css.map */
