--- a/css/main.scss
+++ b/css/main.scss
@@ -534,7 +534,9 @@ main {
 
 
   .performance_section {
+    background: url(../images/performance_bg.jpg) no-repeat;
     height: calc(100vh - 70px);
+    overflow: hidden;
 
     .performance {
       width: 1340px;
@@ -573,9 +575,11 @@ main {
       }
 
       .tab_desc {
+        width: 100%;
         overflow: hidden;
 
         .suspension {
+          display: none;
 
           .sus {
             position: relative;
@@ -597,24 +601,55 @@ main {
               height: 100%;
 
             }
+
+            .sus_desc {
+              position: absolute;
+              top: 70px;
+              left: 50px;
+              z-index: 2;
+              width: 40%;
+
+              p {
+                color: #fff;
+                font-size: 18px;
+
+                &.tit {
+                  font-weight: 700;
+                  text-align: center;
+                  margin-bottom: 15px;
+                  font-size: 26px;
+                }
+              }
+            }
           }
+        }
 
-          .sus_desc {
-            position: absolute;
-            top: 70px;
-            left: 50px;
-            z-index: 2;
-            width: 40%;
+        .technology {
+          .tech {
+            display: flex;
+            background-color: #fff;
 
-            p {
-              color: #fff;
-              font-size: 18px;
-
-              &.tit {
-                font-weight: 700;
-                text-align: center;
-                margin-bottom: 15px;
-                font-size: 26px;
+            .tech_video {
+              width: 54%;
+              video {
+                width: 100%;
+                height: 100%;
+                border: none;
+              }
+            }
+            .tech_desc{
+              width: 46%;
+              padding: 150px 50px 0;
+              z-index: 1;
+              p{
+                font-size: 18px;
+                line-height: 1.5;
+                &.tit {
+                  font-weight: 700;
+                  text-align: center;
+                  margin-bottom: 15px;
+                  font-size: 26px;
+                }
               }
             }
           }
