--- a/css/main.scss
+++ b/css/main.scss
@@ -220,7 +220,7 @@ main {
       color: #fff;
 
       h2 {
-        font-size: 5rem;
+        font-size: 4.5rem;
         padding-bottom: 50px;
         letter-spacing: 2px;
         font-weight: 500;
@@ -234,7 +234,7 @@ main {
           content: '';
           position: absolute;
           width: 1px;
-          height: 74px;
+          height: 82px;
           background-color: #fff;
           margin-right: 20px;
         }
@@ -243,22 +243,28 @@ main {
           width: 100%;
           font-size: 18px;
           margin-left: 10px;
+          line-height: 1.5;
         }
       }
 
       .design_btn {
         text-align: center;
-        padding-top: 20px;
+        padding-top: 40px;
 
         button {
           position: relative;
           display: inline-block;
-          width: 200px;
+          width: 220px;
           height: 50px;
+          margin-right: 30px;
           background: none;
           color: #fff;
           border: 1px solid #ccc;
           cursor: pointer;
+
+          &:last-child {
+            margin-right: 0;
+          }
 
           span {
             position: relative;
@@ -411,8 +417,6 @@ main {
         }
       }
     }
-
-
   }
 
 
@@ -422,9 +426,9 @@ main {
     border-bottom: 1px solid #1e1e1e;
 
     h1 {
-      font-size: 2.8rem;
+      font-size: 2.5rem;
       font-weight: normal;
-      margin-top: 80px;
+      margin-top: 100px;
       text-align: center;
       color: #fff;
     }
@@ -432,15 +436,16 @@ main {
     .genesis_color {
       position: relative;
       width: 100%;
-
+      padding: 0 200px;
+      margin-top: 60px;
 
       .swiper-wrapper {
 
         li {
           width: 100%;
-          height: 700px;
           opacity: 0;
           transition: all 0.3s;
+          padding: 0 50px;
 
           &.swiper-slide-active {
             opacity: 1;
@@ -457,6 +462,7 @@ main {
 
           .color_box {
             img {
+              width: 100%;
               margin: 0 auto;
               transition: .3s;
 
@@ -539,15 +545,14 @@ main {
     overflow: hidden;
 
     .performance {
-      width: 1340px;
-      margin: 0 auto;
+      padding: 0 190px;
 
       h1 {
         text-align: center;
-        font-size: 3rem;
+        font-size: 2.5rem;
         font-weight: normal;
         color: #fff;
-        padding: 50px 0 25px 0;
+        margin: 50px 0 25px 0;
       }
 
       .tab {
@@ -579,7 +584,6 @@ main {
         overflow: hidden;
 
         .suspension {
-          display: none;
 
           .sus {
             position: relative;
@@ -596,7 +600,7 @@ main {
               background: linear-gradient(to left, transparent, #111);
             }
 
-            .sus_bg {
+            .sus_img {
               width: 100%;
               height: 100%;
 
@@ -612,6 +616,7 @@ main {
               p {
                 color: #fff;
                 font-size: 18px;
+                line-height: 1.5;
 
                 &.tit {
                   font-weight: 700;
@@ -625,25 +630,112 @@ main {
         }
 
         .technology {
+          display: none;
+
           .tech {
             display: flex;
-            background-color: #fff;
+            background-color: rgba($color: #000, $alpha: 0.5);
 
             .tech_video {
               width: 54%;
+
               video {
                 width: 100%;
                 height: 100%;
                 border: none;
               }
             }
-            .tech_desc{
+
+            .tech_desc {
               width: 46%;
               padding: 150px 50px 0;
               z-index: 1;
-              p{
+
+              p {
                 font-size: 18px;
                 line-height: 1.5;
+                color: #fff;
+
+                &.tit {
+                  font-weight: 700;
+                  text-align: center;
+                  margin-bottom: 15px;
+                  font-size: 26px;
+                }
+              }
+            }
+          }
+        }
+
+        .buildto {
+          display: none;
+
+          .build {
+            position: relative;
+
+            &::before {
+              content: '';
+              display: block;
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              background: linear-gradient(to left, transparent, #111);
+            }
+
+            .build_img {
+              width: 100%;
+            }
+
+            .build_desc {
+              position: absolute;
+              bottom: 90px;
+              left: 0;
+              width: 48%;
+              z-index: 1;
+              padding: 0 60px;
+
+              p {
+                font-size: 18px;
+                line-height: 1.5;
+                color: #fff;
+
+                &.tit {
+                  font-weight: 700;
+                  text-align: center;
+                  margin-bottom: 15px;
+                  font-size: 26px;
+                }
+              }
+            }
+          }
+        }
+
+        .gvengine {
+          display: none;
+
+          .engine {
+            position: relative;
+
+            .engine_img {
+              width: 140%;
+              height: 100%;
+            }
+
+            .engine_desc {
+              position: absolute;
+              bottom: 0px;
+              left: 0;
+              width: 48%;
+              z-index: 1;
+              padding: 90px 60px;
+
+              p {
+                font-size: 18px;
+                line-height: 1.5;
+                color: #fff;
+
                 &.tit {
                   font-weight: 700;
                   text-align: center;
