--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ img {
   padding: 0 60px;
   background-color: #111;
   z-index: 9999;
+  border-bottom: 1px solid #1e1e1e;
 }
 .header .nav_box {
   width: 100%;
@@ -528,7 +529,7 @@ main .color_section .genesis_color {
   position: relative;
   width: 100%;
   padding: 0 200px;
-  margin-top: 60px;
+  margin-top: 20px;
 }
 main .color_section .genesis_color .swiper-wrapper li {
   width: 100%;
@@ -607,17 +608,18 @@ main .color_section .genesis_color .swiper-button-next {
 main .performance_section {
   background: url(../images/performance_bg.jpg) no-repeat;
   height: calc(100vh - 70px);
+  border-bottom: 1px solid #1e1e1e;
   overflow: hidden;
 }
 main .performance_section .performance {
-  padding: 0 190px;
+  padding: 0 260px;
 }
 main .performance_section .performance h1 {
   text-align: center;
   font-size: 2.5rem;
   font-weight: normal;
   color: #fff;
-  margin: 50px 0 25px 0;
+  margin: 30px 0;
 }
 main .performance_section .performance .tab {
   display: flex;
@@ -687,7 +689,7 @@ main .performance_section .performance .tab_desc .technology .tech {
   background-color: rgba(0, 0, 0, 0.5);
 }
 main .performance_section .performance .tab_desc .technology .tech .tech_video {
-  width: 54%;
+  width: 50%;
 }
 main .performance_section .performance .tab_desc .technology .tech .tech_video video {
   width: 100%;
@@ -695,7 +697,7 @@ main .performance_section .performance .tab_desc .technology .tech .tech_video v
   border: none;
 }
 main .performance_section .performance .tab_desc .technology .tech .tech_desc {
-  width: 46%;
+  width: 50%;
   padding: 150px 50px 0;
   z-index: 1;
 }
@@ -776,4 +778,44 @@ main .performance_section .performance .tab_desc .gvengine .engine .engine_desc 
   text-align: center;
   margin-bottom: 15px;
   font-size: 26px;
+}
+main .performance_section .performance .tab_desc .gvengine .engine .engine_desc .turbo {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #fff;
+}
+main .performance_section .performance .tab_desc .gvengine .engine .engine_desc .engine_count {
+  display: flex;
+  text-align: center;
+  padding-top: 20px;
+}
+main .performance_section .performance .tab_desc .gvengine .engine .engine_desc .engine_count .en_tit {
+  margin-bottom: 10px;
+}
+main .performance_section .performance .tab_desc .gvengine .engine .engine_desc .engine_count .count {
+  font-size: 35px;
+}
+main .performance_section .performance .tab_desc .gvengine .engine .engine_desc .engine_count .rpm {
+  font-size: 30px;
+}
+main .performance_section .performance .tab_desc .gvengine .engine .engine_desc .engine_count .high_ps {
+  width: 50%;
+}
+main .performance_section .performance .tab_desc .gvengine .engine .engine_desc .engine_count .max_tok {
+  width: 50%;
+}
+main .gallery_section {
+  width: 100%;
+  height: calc(100vh - 70px);
+  overflow: hidden;
+}
+main .gallery_section .gallery h1 {
+  color: #fff;
+  text-align: center;
+}
+main .gallery_section .gallery .gallery_div {
+  height: 500px;
+}
+main .gallery_section .gallery .gallery_div img {
+  width: 100%;
+  height: 100%;
 }/*# sourceMappingURL=main.css.map */
