--- a/css/main.scss
+++ b/css/main.scss
@@ -28,6 +28,7 @@ img {
   padding: 0 60px;
   background-color: #111;
   z-index: 9999;
+  border-bottom: 1px solid #1e1e1e;
 
   .nav_box {
     width: 100%;
@@ -437,7 +438,7 @@ main {
       position: relative;
       width: 100%;
       padding: 0 200px;
-      margin-top: 60px;
+      margin-top: 20px;
 
       .swiper-wrapper {
 
@@ -542,17 +543,18 @@ main {
   .performance_section {
     background: url(../images/performance_bg.jpg) no-repeat;
     height: calc(100vh - 70px);
+    border-bottom: 1px solid #1e1e1e;
     overflow: hidden;
 
     .performance {
-      padding: 0 190px;
+      padding: 0 260px;
 
       h1 {
         text-align: center;
         font-size: 2.5rem;
         font-weight: normal;
         color: #fff;
-        margin: 50px 0 25px 0;
+        margin: 30px 0;
       }
 
       .tab {
@@ -637,7 +639,7 @@ main {
             background-color: rgba($color: #000, $alpha: 0.5);
 
             .tech_video {
-              width: 54%;
+              width: 50%;
 
               video {
                 width: 100%;
@@ -647,7 +649,7 @@ main {
             }
 
             .tech_desc {
-              width: 46%;
+              width: 50%;
               padding: 150px 50px 0;
               z-index: 1;
 
@@ -743,6 +745,37 @@ main {
                   font-size: 26px;
                 }
               }
+
+              .turbo {
+                padding-bottom: 20px;
+                border-bottom: 1px solid #fff;
+              }
+
+              .engine_count {
+                display: flex;
+                text-align: center;
+                padding-top: 20px;
+
+                .en_tit {
+                  margin-bottom: 10px;
+                }
+
+                .count {
+                  font-size: 35px;
+                }
+
+                .rpm {
+                  font-size: 30px;
+                }
+
+                .high_ps {
+                  width: 50%;
+                }
+
+                .max_tok {
+                  width: 50%;
+                }
+              }
             }
           }
         }
@@ -750,7 +783,27 @@ main {
     }
   }
 
+  .gallery_section {
+    width: 100%;
+    height: calc(100vh - 70px);
+    overflow: hidden;
 
+    .gallery {
+      h1 {
+        color: #fff;
+        text-align: center;
+      }
+
+      .gallery_div {
+        height: 500px;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
 
   /* .gallery {
       display: flex;
