--- a/css/main.scss
+++ b/css/main.scss
@@ -785,21 +785,71 @@ main {
 
   .gallery_section {
     width: 100%;
-    height: calc(100vh - 70px);
     overflow: hidden;
+    padding-bottom: 100px;
 
     .gallery {
       h1 {
         color: #fff;
         text-align: center;
+        font-size: 3rem;
+        margin: 30px 0;
       }
 
       .gallery_div {
-        height: 500px;
+        width: 100%;
+        padding-top: 100px;
 
-        img {
+        .swiper-slide {
+          transition: .3s;
+
+          &.swiper-slide-active {
+            transform: translateY(-20%);
+          }
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+      .util {
+        padding: 100px 0;
+
+        ul {
           width: 100%;
-          height: 100%;
+          display: flex;
+          justify-content: center;
+
+          li {
+            cursor: pointer;
+            padding: 50px;
+            overflow: hidden;
+            &:hover {
+              .util_gif {
+                img {
+                  scale: 1.2;
+                }
+              }
+            }
+
+            .util_gif {
+              width: 70px;
+              margin: 0 auto;
+              margin-bottom: 15px;
+
+              img {
+                width: 100%;
+                transition: .3s;
+              }
+            }
+
+            p {
+              color: #fff;
+              font-size: 18px;
+              text-align: center;
+            }
+          }
         }
       }
     }
