--- a/css/main.css
+++ b/css/main.css
@@ -418,7 +418,7 @@ main .design_section .popup {
   padding: 20px 50px;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
-  transition: all 0.3s;
+  transition: all 0.5s;
 }
 main .design_section .popup .pop_top,
 main .design_section .popup .pop_bottom {
@@ -446,13 +446,13 @@ main .design_section .popup .pop_bottom .exter_desc,
 main .design_section .popup .pop_bottom .inter_desc {
   width: 40%;
   color: #fff;
-  padding: 20px 50px;
+  padding: 20px 60px;
 }
 main .design_section .popup .pop_top .exter_desc h2,
 main .design_section .popup .pop_top .inter_desc h2,
 main .design_section .popup .pop_bottom .exter_desc h2,
 main .design_section .popup .pop_bottom .inter_desc h2 {
-  font-size: 38px;
+  font-size: 34px;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -460,7 +460,7 @@ main .design_section .popup .pop_top .exter_desc p,
 main .design_section .popup .pop_top .inter_desc p,
 main .design_section .popup .pop_bottom .exter_desc p,
 main .design_section .popup .pop_bottom .inter_desc p {
-  font-size: 22px;
+  font-size: 20px;
 }
 main .design_section .popup .pop_bottom .exter_img {
   width: 55%;
@@ -487,6 +487,7 @@ main .design_section .popup .pop_bottom .exter_desc {
 }
 main .design_section .popup .popup_close {
   position: absolute;
+  opacity: 0;
   top: 20px;
   right: 20px;
   border: 2px solid #fff;
@@ -521,21 +522,19 @@ main .color_section {
 main .color_section h1 {
   font-size: 2.5rem;
   font-weight: normal;
-  margin-top: 100px;
+  padding-top: 70px;
   text-align: center;
   color: #fff;
 }
 main .color_section .genesis_color {
   position: relative;
   width: 100%;
-  padding: 0 200px;
-  margin-top: 20px;
+  padding: 0 250px;
 }
 main .color_section .genesis_color .swiper-wrapper li {
   width: 100%;
   opacity: 0;
   transition: all 0.3s;
-  padding: 0 50px;
 }
 main .color_section .genesis_color .swiper-wrapper li.swiper-slide-active {
   opacity: 1;
@@ -553,7 +552,7 @@ main .color_section .genesis_color .swiper-wrapper li .color_box img {
   transition: 0.3s;
 }
 main .color_section .genesis_color .swiper-wrapper li .color_box img.scale {
-  transform: scale(1.4);
+  transform: scale(1.3);
 }
 main .color_section .genesis_color .swiper-pagination {
   width: 300px;
@@ -633,6 +632,8 @@ main .performance_section .performance .tab p {
   color: #fff;
   border-right: 1px solid #fff;
   cursor: pointer;
+  background: none;
+  transition: 0.3s;
 }
 main .performance_section .performance .tab p.on {
   background-color: #fff;
@@ -644,6 +645,9 @@ main .performance_section .performance .tab p:last-child {
 main .performance_section .performance .tab_desc {
   width: 100%;
   overflow: hidden;
+}
+main .performance_section .performance .tab_desc .suspension {
+  transition: 0.3s;
 }
 main .performance_section .performance .tab_desc .suspension .sus {
   position: relative;
@@ -665,7 +669,7 @@ main .performance_section .performance .tab_desc .suspension .sus .sus_img {
 }
 main .performance_section .performance .tab_desc .suspension .sus .sus_desc {
   position: absolute;
-  top: 70px;
+  bottom: 150px;
   left: 50px;
   z-index: 2;
   width: 40%;
@@ -809,23 +813,47 @@ main .gallery_section {
   padding-bottom: 100px;
 }
 main .gallery_section .gallery h1 {
+  font-weight: normal;
   color: #fff;
   text-align: center;
   font-size: 3rem;
   margin: 30px 0;
+  letter-spacing: 5px;
 }
 main .gallery_section .gallery .gallery_div {
   width: 100%;
   padding-top: 100px;
 }
 main .gallery_section .gallery .gallery_div .swiper-slide {
+  width: 50%;
+  cursor: pointer;
   transition: 0.3s;
+  border: 1px solid #1e1e1e;
+}
+main .gallery_section .gallery .gallery_div .swiper-slide:hover .imgbox img {
+  transform: scale(1.2);
 }
 main .gallery_section .gallery .gallery_div .swiper-slide.swiper-slide-active {
-  transform: translateY(-20%);
+  width: 50%;
+  transform: scale(1);
+  transform: translateY(-15%);
+  z-index: 3;
+}
+main .gallery_section .gallery .gallery_div .swiper-slide.swiper-slide-active .imgbox {
+  margin: 0 auto;
+  overflow: hidden;
+}
+main .gallery_section .gallery .gallery_div .swiper-slide.swiper-slide-prev {
+  transform: translateX(10%);
+  transform: scale(0.8);
+}
+main .gallery_section .gallery .gallery_div .swiper-slide.swiper-slide-next {
+  transform: translateX(-10%);
+  transform: scale(0.8);
 }
 main .gallery_section .gallery .gallery_div .swiper-slide img {
   width: 100%;
+  transition: 0.6s;
 }
 main .gallery_section .gallery .util {
   padding: 100px 0;
@@ -856,4 +884,16 @@ main .gallery_section .gallery .util ul li p {
   color: #fff;
   font-size: 18px;
   text-align: center;
+}
+
+body::-webkit-scrollbar {
+  width: 12px;
+}
+body::-webkit-scrollbar-thumb {
+  height: 25%;
+  background: #1e1e1e;
+  border-radius: 10px;
+}
+body::-webkit-scrollbar-track {
+  background: rgba(17, 17, 18, 0.5);
 }/*# sourceMappingURL=main.css.map */
