--- a/css/main.scss
+++ b/css/main.scss
@@ -313,7 +313,7 @@ main {
       left: 0;
       padding: 20px 50px;
       backdrop-filter: blur(5px);
-      transition: all 0.3s;
+      transition: all 0.5s;
 
       .pop_top,
       .pop_bottom {
@@ -336,16 +336,16 @@ main {
         .inter_desc {
           width: 40%;
           color: #fff;
-          padding: 20px 50px;
+          padding: 20px 60px;
 
           h2 {
-            font-size: 38px;
+            font-size: 34px;
             text-align: center;
             margin-bottom: 20px;
           }
 
           p {
-            font-size: 22px;
+            font-size: 20px;
           }
         }
       }
@@ -384,6 +384,7 @@ main {
 
       .popup_close {
         position: absolute;
+        opacity: 0;
         top: 20px;
         right: 20px;
         border: 2px solid #fff;
@@ -429,7 +430,7 @@ main {
     h1 {
       font-size: 2.5rem;
       font-weight: normal;
-      margin-top: 100px;
+      padding-top: 70px;
       text-align: center;
       color: #fff;
     }
@@ -437,16 +438,13 @@ main {
     .genesis_color {
       position: relative;
       width: 100%;
-      padding: 0 200px;
-      margin-top: 20px;
+      padding: 0 250px;
 
       .swiper-wrapper {
-
         li {
           width: 100%;
           opacity: 0;
           transition: all 0.3s;
-          padding: 0 50px;
 
           &.swiper-slide-active {
             opacity: 1;
@@ -468,7 +466,7 @@ main {
               transition: .3s;
 
               &.scale {
-                transform: scale(1.4);
+                transform: scale(1.3);
               }
             }
           }
@@ -569,6 +567,8 @@ main {
           color: #fff;
           border-right: 1px solid #fff;
           cursor: pointer;
+          background: none;
+          transition: .3s;
 
           &.on {
             background-color: #fff;
@@ -584,8 +584,8 @@ main {
       .tab_desc {
         width: 100%;
         overflow: hidden;
-
         .suspension {
+          transition: .3s;
 
           .sus {
             position: relative;
@@ -605,12 +605,11 @@ main {
             .sus_img {
               width: 100%;
               height: 100%;
-
             }
 
             .sus_desc {
               position: absolute;
-              top: 70px;
+              bottom: 150px;
               left: 50px;
               z-index: 2;
               width: 40%;
@@ -790,10 +789,12 @@ main {
 
     .gallery {
       h1 {
+        font-weight: normal;
         color: #fff;
         text-align: center;
         font-size: 3rem;
         margin: 30px 0;
+        letter-spacing: 5px;
       }
 
       .gallery_div {
@@ -801,14 +802,44 @@ main {
         padding-top: 100px;
 
         .swiper-slide {
+          width: 50%;
+          cursor: pointer;
           transition: .3s;
+          border: 1px solid #1e1e1e;
+
+          &:hover {
+            .imgbox {
+              img {
+                transform: scale(1.2);
+              }
+            }
+          }
 
           &.swiper-slide-active {
-            transform: translateY(-20%);
+            width: 50%;
+            transform: scale(1);
+            transform: translateY(-15%);
+            z-index: 3;
+
+            .imgbox {
+              margin: 0 auto;
+              overflow: hidden;
+            }
+          }
+
+          &.swiper-slide-prev {
+            transform: translateX(10%);
+            transform: scale(0.8);
+          }
+
+          &.swiper-slide-next {
+            transform: translateX(-10%);
+            transform: scale(0.8);
           }
 
           img {
             width: 100%;
+            transition: .6s;
           }
         }
       }
@@ -825,6 +856,7 @@ main {
             cursor: pointer;
             padding: 50px;
             overflow: hidden;
+
             &:hover {
               .util_gif {
                 img {
@@ -854,6 +886,8 @@ main {
       }
     }
   }
+
+
 
   /* .gallery {
       display: flex;
@@ -1015,4 +1049,20 @@ main {
 
     }
   } */
+}
+
+body {
+  &::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    height: 25%;
+    background: #1e1e1e;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: rgba(17, 17, 18, 0.5);
+  }
 }
