--- a/css/main.css
+++ b/css/main.css
@@ -760,6 +760,16 @@ main .performance_section .performance .tab_desc .gvengine {
 main .performance_section .performance .tab_desc .gvengine .engine {
   position: relative;
 }
+main .performance_section .performance .tab_desc .gvengine .engine::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to left, transparent, #111);
+}
 main .performance_section .performance .tab_desc .gvengine .engine .engine_img {
   width: 140%;
   height: 100%;
