--- a/css/main.scss
+++ b/css/main.scss
@@ -584,6 +584,7 @@ main {
       .tab_desc {
         width: 100%;
         overflow: hidden;
+
         .suspension {
           transition: .3s;
 
@@ -719,6 +720,17 @@ main {
           .engine {
             position: relative;
 
+            &::before {
+              content: '';
+              display: block;
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              background: linear-gradient(to left, transparent, #111);
+            }
+
             .engine_img {
               width: 140%;
               height: 100%;
@@ -731,6 +743,8 @@ main {
               width: 48%;
               z-index: 1;
               padding: 90px 60px;
+
+
 
               p {
                 font-size: 18px;
