--- a/css/main.css
+++ b/css/main.css
@@ -618,7 +618,7 @@ main .performance_section .performance h1 {
   font-size: 2.5rem;
   font-weight: normal;
   color: #fff;
-  margin: 30px 0;
+  padding: 35px 0;
 }
 main .performance_section .performance .tab {
   display: flex;
@@ -820,14 +820,13 @@ main .performance_section .performance .tab_desc .gvengine .engine .engine_desc 
 main .gallery_section {
   width: 100%;
   overflow: hidden;
-  padding-bottom: 100px;
 }
 main .gallery_section .gallery h1 {
   font-weight: normal;
   color: #fff;
   text-align: center;
   font-size: 3rem;
-  margin: 30px 0;
+  padding: 35px 0;
   letter-spacing: 5px;
 }
 main .gallery_section .gallery .gallery_div {
@@ -835,38 +834,35 @@ main .gallery_section .gallery .gallery_div {
   padding-top: 100px;
 }
 main .gallery_section .gallery .gallery_div .swiper-slide {
-  width: 50%;
+  width: 60%;
   cursor: pointer;
   transition: 0.3s;
   border: 1px solid #1e1e1e;
+  transform: scale(0.8);
 }
 main .gallery_section .gallery .gallery_div .swiper-slide:hover .imgbox img {
   transform: scale(1.2);
 }
 main .gallery_section .gallery .gallery_div .swiper-slide.swiper-slide-active {
-  width: 50%;
-  transform: scale(1);
-  transform: translateY(-15%);
-  z-index: 3;
-}
-main .gallery_section .gallery .gallery_div .swiper-slide.swiper-slide-active .imgbox {
-  margin: 0 auto;
-  overflow: hidden;
+  width: 60%;
+  transform: translateY(-15%) scale(1);
 }
 main .gallery_section .gallery .gallery_div .swiper-slide.swiper-slide-prev {
-  transform: translateX(10%);
-  transform: scale(0.8);
+  transform: translateX(5%) scale(0.8);
 }
 main .gallery_section .gallery .gallery_div .swiper-slide.swiper-slide-next {
-  transform: translateX(-10%);
-  transform: scale(0.8);
+  transform: translateX(-5%) scale(0.8);
 }
-main .gallery_section .gallery .gallery_div .swiper-slide img {
+main .gallery_section .gallery .gallery_div .swiper-slide .imgbox {
+  overflow: hidden;
+  margin: 0 auto;
+}
+main .gallery_section .gallery .gallery_div .swiper-slide .imgbox img {
   width: 100%;
   transition: 0.6s;
 }
 main .gallery_section .gallery .util {
-  padding: 100px 0;
+  padding: 30px 0;
 }
 main .gallery_section .gallery .util ul {
   width: 100%;
